# pypi-package-Automated-ML--Report

./: LICENSE  README.md  setup.cfg
src/Automated-ML-Report/: DataPreprocessing.py  EDA.PY  EDAReport.py  ModelReport.py  ModelTrain.py  main.py
src/Automated_ML_Report.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ml_analytics/: DataPreprocessing.py  EDAReport.py  ModelReport.py  ModelTrain.py
src/ml_analytics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
