[metadata]
name = Automated-ML-Report
version = 1.0.0
author = Ahamed Nusri
author_email = 321nusri@gmail.com
description = Streamline your data-driven journey with Automated-ML-Report, simplifying insightful automated machine learning reporting, while EDA Report facilitates effortless exploratory data analysis by automatically generating comprehensive visualizations and summaries to unravel dataset intricacies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nusri7/pypi-package-Automated-ML--Report
project_urls =
    Bug Tracker = https://github.com/Nusri7/pypi-package-Automated-ML--Report/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
